# weather

./: .gitignore  Cargo.toml  LICENSE
resource/: response.json
src/: client.rs  iter.rs  main.rs  model.rs  rest.rs
