[package]
name = "weather"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", features = ["derive"] }
directories = "4.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
