[package]
name = "weather"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
directories = "6.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
